# mzinga_cpp_backend-main

./: CMakeLists.txt  Dockerfile  config.txt  database_notes.txt  main.cpp  monitor.sh  monitor_1.sh  notes.txt  secret_api_beem_another.txt
controllers/: activityController.hxx  addressController.hxx  billController.hxx  branchController.hxx  checkinController.hxx  companiesController.hxx  customerController.hxx  employeeController.hxx  meterController.hxx  paymentController.hxx  pricesController.hxx  taskController.hxx  unitController.hxx  usersController.hxx
core/: database.hxx  date_convert.hxx  helpers.hxx  safe_json.hxx  server.hxx  session.hxx  session_macro.hxx  sms.hxx
http/: authHttp.hxx  billHttp.hxx  branchHttp.hxx  common.hxx  cusomerHttp.hxx  customerHttp.hxx  employeeHttp.hxx  meterHttp.hxx  meterReadHtpp.hxx  paymentHttp.hxx  priceHttp.hxx  taskHttp.hxx  unitHttp.hxx
middleware/: cors_handler..hxx  json_parser.hxx
models/: activity-odb.cxx  activity-odb.hxx  activity-odb.ixx  activity.cpp  activity.hxx  activity.sql  address-odb.cxx  address-odb.hxx  address-odb.ixx  address.cpp  address.hxx  address.sql  bill-odb.cxx  bill-odb.hxx  bill-odb.ixx  bill.hxx  bill.sql  branch-odb.cxx  branch-odb.hxx  branch-odb.ixx  branch.hxx  branch.sql  checkin-odb.cxx  checkin-odb.hxx  checkin-odb.ixx  checkin.cpp  checkin.hxx  checkin.sql  companies-odb.cxx  companies-odb.hxx  companies-odb.ixx  companies.hxx  companies.sql  customer-odb.cxx  customer-odb.hxx  customer-odb.ixx  customer.hxx  customer.sql  employee-odb.cxx  employee-odb.hxx  (+34 more)
router/: router.hxx
sql/: admin.sql  employee.sql  logan_employee.sql
